# ModulOS

./: .gitignore  BUILDING  INSTALL  Makefile  README  README.md
.github/workflows/: build.yml  test.yml
LICENSES/: ACPICA
acpi/: Makefile  madt.c
acpica/: Makefile  acpica.c  envtable.c  int.c  io.c  mem.c  misc.c  mutexsync.c  outf.c  pci.c  pio.c  tables.c  thread.c
acpica/dispatcher/: dsutils.c
acpica/events/: evxfregn.c
acpica/parser/: psobject.c
acpica/service_layers/: osmodulosxf.c
apic/: Makefile  calibrate.S  ioapic.c  isr.c  lapic.c  pic8259.c  pit.c
boot/: Makefile
boot/multiboot2/: 06_boot.ld  Makefile  boot.S  grub.cfg  init.c
cfg/: boot.ld  grub.cfg  kernel.ld  modulos.ld
contrib/: noredzone.patch
core/: IDT.c  IDTasm.S  Makefile  asmroutines.S  atomic.c  atomicasm.S  cpulowlevel.S  exceptions.c  idt.c  idtasm.S  kentry.c  ktransfer.S  memory.c  memoryasm.S  mp.c  paging.c  panic.c  panicasm.S  portio.S  scheduler.c  schedulerasm.S  serial.c  threads.c  utils.c
drivers/: Makefile
drivers/acpi/: sci.S  sci_dispatch.c  tables.c
drivers/acpica/: Makefile
drivers/acpica_osl/: init.c  namespace.c  osl.c
drivers/ahci/: ahci.c  ahci_init.c
drivers/apic/: apic_init.c  apic_regs.c  ipi.c  isr.S  isr_dispatch.c
drivers/disk/: disk.c
drivers/ext2/: ext2.c
drivers/gpt/: gpt.c
drivers/hpet/: hpet_init.c
drivers/ioapic/: ioapic_init.c  routing.c
drivers/pci/: pci_config.c
drivers/pcie/: generic_database.c  pcie.c  pcie_init.c
drivers/pic_8259/: isr.S  (+1 more)
include/: boot
kernel/: Makefile
multiboot2/: Makefile  boot.S  init.S  init.c  realmode.S
scripts/: Makefile.header  Makefile.kcflags  Makefile.targets  debug_gdb  gen_compile_commands  scan_build  simulate_qemu
test/: Makefile
userland/: Makefile
userland/mlibc-patch/sysdeps/modulos/: crt1.S  entry.cpp  meson.build  sysdeps.cpp
userland/mlibc-patch/sysdeps/modulos/include/: abi-bits  syscall.h  syscall_vectors.h
(+242 files in other folders)
